2003-02-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/sysconf.c (__sysconf): Test for LOGIN_NAME_MAX and
	TTY_NAME_MAX and not the _POSIX_* minimal value macros.
	* sysdeps/unix/sysv/linux/bits/local_lim.h: Define TTY_NAME_MAX
	and LOGIN_NAME_MAX.

2003-02-17  Kevin B. Hendricks  <kevin.hendricks@sympatico.ca>
	    Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/powerpc/elf/libc-start.c: Handle NONTLS_INIT_TP.
	* sysdeps/powerpc/powerpc32/__longjmp.S: Remove R2 handling.
	* sysdeps/powerpc/powerpc32/setjmp.S: Likewise.
	* sysdeps/powerpc/powerpc32/fpu/__longjmp.S: Likewise.
	* sysdeps/powerpc/powerpc32/fpu/setjmp.S: Likewise.

2003-02-17  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/unix/sysv/linux/powerpc/ftruncate64.c: Delete.
	* sysdeps/unix/sysv/linux/powerpc/truncate64.c: Delete.
	* sysdeps/unix/sysv/linux/powerpc/pread64.c: Delete.
	* sysdeps/unix/sysv/linux/powerpc/pread.c: Delete.
	* sysdeps/unix/sysv/linux/powerpc/pwrite64.c: Delete.
	* sysdeps/unix/sysv/linux/powerpc/pwrite.c: Delete.

	* sysdeps/unix/sysv/linux/powerpc/fe_nomask.c: Move file...
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/fe_nomask.c: ...here.
	* sysdeps/unix/sysv/linux/powerpc/glob64.c: Move file...
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/glob64.c: ...here.

	* sysdeps/unix/sysv/linux/tcgetattr.c: Use INLINE_SYSCALL.
	* sysdeps/unix/sysv/linux/tcsetattr.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/tcgetattr.c: Delete.
	* sysdeps/unix/sysv/linux/powerpc/tcsetattr.c: Delete.

2003-02-14  Thorsten Kukuk  <kukuk@suse.de>

	* nss/getent.c (print_hosts): Print all IP addresses of one host.

2003-02-15  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/tls.h: New file.
	* sysdeps/mach/hurd/i386/tls.h: New file.

	* mach/errsystems.awk: Include <errno.h> in generated output.

	* sysdeps/mach/Makefile (mach-before-compile rule): Pass generating=t,
	use target mach-before-compile instead of generated.
	(mach-before-compile): New target.